--- a/views/newMemo.erb
+++ b/views/newMemo.erb
@@ -1,6 +1,6 @@
 <h1>メモアプリ</h1>
 <form method="post" action="/new/create">
-  <p><input type="textarea" name="title" value=""></p>
-  <p><input type="textarea" name="body" value=""></p>
+  <p><input required type="textarea" maxlength='20' name="title" value=""></p>
+  <p><input required type="textarea" maxlength='400' name="body" value=""></p>
   <p><input type="submit" value="保存"></p>
 </form>
