--- a/views/showMemo.erb
+++ b/views/showMemo.erb
@@ -1,7 +1,7 @@
 <h1><a href="/">メモアプリ</a></h1>
 <div class="content">
-  <h2> <%= @memo["title"] %> </h2>
-  <p><%= @memo["body"] %></p>
+  <h2> <%= h(@memo["title"]) %> </h2>
+  <p><%= h(@memo["body"]) %></p>
   <div class="btnArea">
     <table>
       <form method="get" action="/editMemo/<%= @memo["id"] %>">
